--- a/src/App.css
+++ b/src/App.css
@@ -45,3 +45,10 @@ body, html{
   overflow: hidden;
   text-overflow: ellipsis;
 }
+
+[data-reach-combobox-option][data-selected],
+[data-reach-combobox-option][data-highlighted],
+[data-reach-combobox-option]:hover{
+  background: #ccc;
+  color: black;
+}
