--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,10 @@ body, html{
   box-sizing: border-box;
 }
 
+*::selection{
+  background-color: transparent;
+}
+
 .session-card{
   /* background: red; */
   padding: 0.15rem 0.25rem;
